<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>com.github.phoswald</groupId>
    <artifactId>sonatype-pom</artifactId>
    <version>1.0.1</version>
    <relativePath />
  </parent>

  <artifactId>rstm</artifactId>
  <version>0.1.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.release>25</maven.compiler.release>
    <maven.compiler.proc>full</maven.compiler.proc>
    <slf4j.version>2.0.17</slf4j.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <!-- Java / Jakarta EE APIs and Implementation -->
      <dependency>
        <groupId>jakarta.json</groupId>
        <artifactId>jakarta.json-api</artifactId>
        <version>2.1.3</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.parsson</groupId>
        <artifactId>parsson</artifactId>
        <version>1.1.7</version>
      </dependency>
      
      <!-- Slf4j -->
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>${slf4j.version}</version>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-simple</artifactId>
        <version>${slf4j.version}</version>
      </dependency>
      
      <!-- Annotation Processors -->
      <dependency>
        <groupId>com.github.phoswald</groupId>
        <artifactId>record-builder</artifactId>
        <version>0.1.0</version>
      </dependency>

      <!-- Testing -->
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>6.0.1</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.hamcrest</groupId>
        <artifactId>hamcrest</artifactId>
        <version>3.0</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>io.rest-assured</groupId>
        <artifactId>rest-assured</artifactId>
        <version>6.0.0</version>
      </dependency>
      <dependency>
        <groupId>com.h2database</groupId>
        <artifactId>h2</artifactId>
        <version>2.4.240</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.14.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.5.4</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <modules>
    <module>rstm-config</module>
    <module>rstm-security</module>
    <module>rstm-databind</module>
    <module>rstm-http</module>
    <module>rstm-template</module>
  </modules>

  <repositories>
    <repository>
      <id>code.phoswald.ch</id>
      <url>https://code.phoswald.ch/api/packages/philip/maven</url>
    </repository>
  </repositories>

  <distributionManagement>
    <repository>
      <id>code.phoswald.ch</id>
      <url>https://code.phoswald.ch/api/packages/philip/maven</url>
    </repository>
    <snapshotRepository>
      <id>code.phoswald.ch</id>
      <url>https://code.phoswald.ch/api/packages/philip/maven</url>
    </snapshotRepository>
  </distributionManagement>

</project>
